--- a/responsive_01/style.css
+++ b/responsive_01/style.css
@@ -1,4 +1,5 @@
 /* Desktop first */
+/*
 div {
     border: black solid 1px;
     height: 30px;
@@ -12,7 +13,7 @@ div {
         width: 100%;
     }
 }
-
+*/
 /* Mobile first */
 div {
     border: black solid 1px;
@@ -25,5 +26,14 @@ div {
     div {
         display: inline-block;
         width: 32.9%;
+    }
+}
+
+
+/* Mettre un fond rouge sur la 2è div quand écran > 700px */
+@media screen and (min-width: 700px) {
+
+    div:nth-child(2) {
+        background-color: red;
     }
 }
