--- a/grid_01/style.css
+++ b/grid_01/style.css
@@ -9,7 +9,7 @@ div.container {
 div.one {
     background-color: red;
     color: white;
-    
+    grid-column: 1 / 3;
 }
 
 div.two {
@@ -21,20 +21,22 @@ div.two {
 div.three {
     background-color: blue;
     color: white;
-    
+    grid-row: 3 / 4;
 }
 
 div.four {
     background-color: yellow;
-                
+    grid-row: 2 / 4;
+    grid-column: 3 / 4;          
 }
 
 div.five {
     background-color: violet;
-            
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 div.six {
     background-color: orange;
-
+    grid-row: 4 / 5;
 }
